[package]
name = "rw_optimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
glob = "0.3.1"
globset = "0.4.13"
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
indicatif = "0.17.7"
inquire = "0.6.2"
rayon = "1.8.0"
walkdir = "2.4.0"
